--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap");
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 :root {
   --white: #f7f1f8;
@@ -9,6 +9,7 @@
   --light-blue: #82aeb1;
   --orange: #f39b53;
   --dark-orange: #df7620;
+  --gray: #dddddd;
 }
 
 *,
@@ -22,7 +23,7 @@ body {
   padding: 0;
   font-family: "Roboto", Helvetica;
   color: var(--white);
-  background-color: var(--light-blue);
+  background-color: var(--gray);
 }
 h1 {
   font-size: 2rem;
@@ -39,6 +40,10 @@ p {
   font-size: 1.2rem;
   line-height: 1.6;
   font-weight: 400;
+}
+
+.width-15 {
+  width: 15%;
 }
 
 /* NAVBAR */
@@ -89,7 +94,6 @@ p {
   align-self: center;
 }
 
-
 .herorows-text {
   padding-bottom: 0.5em;
   width: 50%;
@@ -110,6 +114,4 @@ p {
     width: 50%;
     font-size: 1.3rem;
   }
-
-  
 }
