--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,13 @@ p {
   align-self: center;
 }
 
+.dashboard-link:hover {
+  border-bottom: 2px solid var(--dark-orange);
+  border-radius: 0;
+  width: 70%;
+  transform: scale(1.1);
+}
+
 @media (min-width: 972px) {
   /* .hero-img {
     background-color: red;
