--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,8 @@ body {
   padding: 0;
   font-family: "Roboto", Helvetica;
   color: var(--white);
-  background-color: var(--gray);
+  background-color: var(--light-blue);
+  overflow: hidden;
 }
 h1 {
   font-size: 2rem;
@@ -103,8 +104,8 @@ p {
 .dashboard-link:hover {
   border-bottom: 2px solid var(--dark-orange);
   border-radius: 0;
-  width: 70%;
-  transform: scale(1.1);
+  width: 100%;
+  transform: scale(1.25);
 }
 
 @media (min-width: 972px) {
