--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
   --orange: #f39b53;
   --dark-orange: #df7620;
   --gray: #b0b0b0;
+  --red: #f54e4e;
+  --green: #4aec8c;
 }
 
 *,
@@ -121,4 +123,66 @@ p {
     width: 50%;
     font-size: 1.3rem;
   }
+}
+
+.pomodoro {
+  padding-top: 50px;
+  max-width: 340px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+button {
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.8);
+  border: 0;
+  display: inline-block;
+  width: 100px;
+  cursor: pointer;
+}
+
+.with_text {
+  width: auto;
+  background-color: var(--light-blue);
+  border-radius: 10px;
+  padding: 10px 20px;
+  font-size: 1.4rem;
+  line-height: 36px;
+}
+.with_text:hover {
+  background-color: var(--dark-blue);
+}
+
+.with_text svg {
+  width: 36px;
+  float: left;
+  margin-right: 5px;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  text-transform: capitalize;
+}
+
+.slider {
+  height: 40px;
+  border: 2px solid var(--dark-orange);
+  border-radius: 20px;
+}
+
+.thumb {
+  background-color: var(--dark-orange);
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+}
+
+.green {
+  border: 2px solid var(--green);
+}
+.green .thumb {
+  background-color: var(--green);
 }
